# ZQTPlayer

./: .gitignore  CMakeLists.txt  Main.qml  README.md  THIRD_PARTY_NOTICES.md  main.cpp
MediaPlayer/: AVCodecHandler.cpp  AVCodecHandler.h  AVPlayerStatus.h  FrameHandler.cpp  FrameHandler.h  MediaInfoDialog.qml  PacketQueue.cpp  PacketQueue.h  PlayerConfig.cpp  PlayerConfig.h  PlayerWindowManager.cpp  PlayerWindowManager.h
MediaPlayer/opengl/: OpenGLVideoItem.cpp  OpenGLVideoItem.h
MediaPlayer/rtx/: RtxVsrClient.cpp  RtxVsrClient.h  rtx_hdr_vsr_bridge.h
i18n/: app_en_US.ts  app_zh_CN.ts
pages/: Home.qml  HomeController.cpp  HomeController.h  LanguageManager.cpp  LanguageManager.h  LocalMediaPlayer.qml  Settings.qml  SettingsController.cpp  SettingsController.h  StyleManager.cpp  StyleManager.h  ThemeManager.cpp  ThemeManager.h
scripts/: deploy.ps1
